<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="video_detail">视频详情</string>

    <!-- 三级联动对话框 -->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="club_lable_name">舞社名称：</string>
    <string name="club_name_hine">起个响亮的名字</string>
    <string name="club_logo_null">舞社头像不能为空</string>
    <string name="club_name_null">舞社名称不能为空</string>
    <string name="club_phone_name">联系电话：</string>
    <string name="club_phone_hine">请输入联系电话</string>
    <string name="club_detail_address">详细地址：</string>
    <string name="club_des_lable">简介：</string>
    <string name="club_des_hine">快来介绍一下你的舞社吧！</string>
    <string name="club_detail_address_null">详情地址不能为空</string>
    <string name="apply_club">提交申请</string>
    <string name="quite_app">退出应用</string>
    <string name="hint_add_firends_edit">搜索失重用户（昵称）</string>
    <!-- 接口异常信息 -->


    <!-- 成功信息 -->
    <string name="ok_login">登录成功</string>
    <string name="ok_reg">注册成功</string>
    <string name="ok_find_identify">请求验证码成功，稍后以短信形式发送到手机上</string>
    <string name="ok_clear_user">清除用户成功</string>
    <string name="app_name">失重</string>
    <string name="app_name_p">SHIZHONG</string>
    <string name="app_signture">一尽到底</string>
    <string name="reg">注册</string>
    <string name="login">登录</string>
    <string name="login_weichart">微信登录</string>
    <string name="login_sina">新浪登录</string>
    <string name="input_pwd"><font size="12">密码</font></string>
    <string name="mobile_number">手机号：</string>
    <string name="input_mobile"><font size="12">手机号</font></string>
    <string name="mobile_hint"><font size="12">限中国大陆</font></string>
    <string name="input_identify">验证码：</string>
    <string name="identify_hint">请输入短信验证码</string>
    <string name="identify_text">获取验证码</string>
    <string name="input_password">密码：</string>
    <string name="password_hint">填写密码为6-20字符</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="user_pro">用户协议</string>
    <string name="reg_title">手机号注册</string>
    <string name="reg_alter_text">请输入你要注册的手机号</string>
    <string name="reg_ok_text">注册表示您已经同意</string>
    <string name="find_back_pwd_title">找回密码</string>
    <string name="find_back_pwd"><u>找回密码?</u></string>
    <string name="QQ_login">QQ登录</string>
    <string name="Sina_login">新浪登录</string>
    <string name="WeChat_login">微信登录</string>
    <string name="base_info">基本资料</string>
    <string name="upload_head_image">点击上传头像</string>
    <string name="send">发送</string>
    <string name="input_check_code">请输入四位验证码</string>
    <string name="input_signture">请输入签名</string>
    <string name="next">下一步</string>
    <string name="setting_pwd_title">设置密码</string>
    <string name="nick_name">昵称：</string>
    <string name="input_nick_name">请输入昵称</string>
    <string name="nick_name_null_err">昵称不能为空</string>
    <string name="men">男</string>
    <string name="women">女</string>
    <string name="gender">性别：</string>
    <string name="place">地区：</string>
    <string name="address">请输入所在地区</string>
    <string name="birth">生日：</string>
    <string name="birth_hint">出生日期 1991-01－01 </string>
    <string name="constellation">星座：</string>
    <string name="signture">签名：</string>
    <string name="birth_error_null">生日不能为空</string>
    <string name="address_null_error">请输入所在小区</string>
    <string name="clicked_next">点击下一步表示同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="setting_pwd_arlter_text">请设置你的密码</string>
    <string name="finish">完成</string>
    <string name="hint_password">设置密码为6－20个字符</string>
    <string name="phone_no_error">手机号不能为空</string>
    <string name="phone_rex_error">手机号不正确，请重新输入</string>
    <string name="pwd_no_error">密码不能为空</string>
    <string name="pwd_rex_error">密码必须包6－20位含字母，数字，下划线等特殊字符</string>
    <string name="choise_favorite_dances">选择你感兴趣的舞种</string>
    <string name="choise_finish">选好了</string>
    <string name="home">主页</string>
    <string name="jiequ">街区</string>
    <string name="message">消息</string>
    <string name="me">我的</string>
    <string name="camera">摄影圈</string>
    <string name="recommended">推荐</string>
    <string name="dynamic">动态</string>
    <string name="camera_menu">相机</string>
    <string name="photos_menu">相册</string>
    <string name="content_null_err">内容不能为空</string>
    <string name="identify_code_null_err">验证码不能为空</string>
    <string name="identify_hint_text">请输入验证码</string>
    <string name="phone_null_err">手机号不能为空</string>
    <string name="phone_not_match_err">手机号码有误，请重新输入</string>
    <string name="protocol_read">请阅读并同意条款</string>
    <string name="net_conected_error">网络连接失败，请检查后重试</string>
    <string name="net_error">网络异常</string>
    <string name="tie_content_less">正文字数过短,请输入不少于6个字</string>
    <string name="tie_content_more">正文字数过多,请控制在2000字以内</string>
    <string name="tie_title_less">标题不能为空</string>
    <string name="tie_title_more">标题字数过多,请控制在40字以内</string>
    <string name="error_photo_null">头像不能为空</string>
    <string name="city">城市</string>
    <string name="province">省份</string>
    <string name="street">街道，小区</string>
    <string name="error_address_null">地址不能为空</string>
    <string name="club_apply_btn">申请入驻舞社</string>
    <string name="club">舞社</string>
    <string name="new_friends_icon">新朋友</string>
    <string name="like_icon">喜欢</string>
    <string name="comment_icon">评论</string>
    <string name="notice_icon">通知</string>
    <string name="des_progress">至少录制到这里哦！</string>
    <string name="up_video">导入视频</string>
    <string name="you_pick_is_too_small">所选图片尺寸过小，将自动进行适当放大.</string>
    <string name="waiting">正在处理，请稍后。。。</string>
    <string name="crop__saving">保存图片…</string>
    <string name="crop__wait">请稍等…</string>
    <string name="crop__pick_error">裁剪源图片错误</string>
    <string name="choise_music">选择舞曲</string>
    <string name="recode_no_less_five">录制5秒钟</string>
    <string name="my_music">我的音乐</string>
    <string name="musics">音乐库</string>
    <string name="record_preview_building">视频生成中。。。</string>
    <string name="video_vote_ok">视频点赞成功</string>
    <string name="video_vote_fail">视频点赞失败</string>
    <string name="video_vote_cancle">视频取消点赞</string>
    <string name="video_vode_cancle_fail">视频取消点赞失败</string>
    <string name="action_back">返回</string>
    <string name="record_preview_music_nothing">无</string>
    <string name="record_preview_tab_theme">主题</string>
    <string name="record_preview_tab_filter">滤镜</string>
    <string name="record_camera_author">%1$s 作品</string>
    <string name="record_preview_encoding">正在转码…</string>
    <string name="record_preview_encoding_format">转码中\t%d%%</string>
    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>
    <string name="has_attent">已关注</string>
    <string name="imageview_content_description"></string>
    <string name="background_color_textview">背景颜色:</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">暂时没有最新数据</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">没有更多数据</string>
    <string name="about_pro"><u>用户协议</u></string>
    <string name="about_ulr"><u>www.shizhongapp.com</u></string>
    <string name="music">音乐</string>

</resources>