<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="44dp"
        layout="@layout/top_bar_layout_with_left_black" >
    </include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name_p"
        android:textColor="@android:color/white"
        android:textSize="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/app_signture"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <LinearLayout
        style="@style/edid_layout_style"
        android:layout_marginTop="24dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/mobile_number"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <com.shizhong.view.ui.base.view.ClearEditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/mobile_hint"
            android:inputType="phone"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#B1B1B1"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/edid_layout_style"
        android:layout_marginTop="18dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/input_identify"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <com.shizhong.view.ui.base.view.ClearEditText
            android:id="@+id/et_denglu_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/identify_hint"
            android:paddingRight="3dp"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#B1B1B1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/identify_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_corner_right_yellow_selector"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/identify_text"
            android:textColor="@color/selector_white_text"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/edid_layout_style"
        android:layout_marginTop="18dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/input_password"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <com.shizhong.view.ui.base.view.ClearEditText
            android:id="@+id/pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#B1B1B1"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/next"
        style="@style/edid_layout_style"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_corner_yellow_selector"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/selector_white_text"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/clear_userInfo"
        style="@style/edid_layout_style"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_corner_yellow_selector"
        android:gravity="center"
        android:text="删除用户"
        android:textColor="@color/selector_white_text"
        android:textSize="15sp"
        android:visibility="gone" />

</LinearLayout>