<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="ResAuto" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/base_info"
        android:textColor="@android:color/white"
        android:textSize="17dp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp" >

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/user_head"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:layout_gravity="center"
            android:src="@drawable/grey_drawable"
            fresco:roundAsCircle="true"
            fresco:actualImageScaleType="focusCrop"
            fresco:roundingBorderWidth="2dp"
            fresco:roundingBorderColor="@color/round_view_bound_color"
            fresco:placeholderImage="@drawable/sz_head_default"
            fresco:placeholderImageScaleType="centerCrop"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/photo_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/upload_head_image"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </FrameLayout>

    <LinearLayout
        style="@style/edid_layout_style"
        android:layout_marginTop="18dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/nick_name"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <com.shizhong.view.ui.base.view.ClearEditText
            android:id="@+id/nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/input_nick_name"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#B1B1B1"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/edid_layout_style"
        android:layout_marginTop="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/gender"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <com.shizhong.view.ui.base.view.MyRadioGroup
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/men"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/gender_selector"
                android:drawablePadding="10dp"
                android:text="@string/men"
                android:textColor="@color/selector_white_to_yellow_text"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/women"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableLeft="@drawable/gender_selector"
                android:drawablePadding="10dp"
                android:text="@string/women"
                android:textColor="@color/selector_white_to_yellow_text" />
        </com.shizhong.view.ui.base.view.MyRadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/birth_layout"
        style="@style/edid_layout_style"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_corner_translation"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/birth"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/birth_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/birth_hint"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#B1B1B1"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_layout"
        style="@style/edid_layout_style"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_corner_translation"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/place"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/address"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#B1B1B1"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/next"
        style="@style/edid_layout_style"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_corner_yellow_selector"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/selector_white_text"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clicked_next"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/yellow_fdda00" />
    </LinearLayout>

</LinearLayout>