<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        layout="@layout/view_login_logo" >
    </include>

    <LinearLayout
        style="@style/edid_layout_style"
        android:layout_marginTop="24dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@drawable/phone_icon" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:layout_marginRight="24dp"
            android:background="@android:color/white" />

        <com.shizhong.view.ui.base.view.ClearEditText
            android:id="@+id/et_denglu_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/input_mobile"
            android:inputType="number"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#B1B1B1"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/edid_layout_style"
        android:layout_marginTop="12dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@drawable/password_icon" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:layout_marginRight="24dp"
            android:background="@android:color/white" />

        <com.shizhong.view.ui.base.view.ClearEditText
            android:id="@+id/et_denglu_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#B1B1B1"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_door"
        style="@style/edid_layout_style"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_corner_yellow_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/reg_door"
        style="@style/edid_layout_style"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_corner_yellow_fram_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/reg"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="12dp" >

        <TextView
            android:id="@+id/find_pwd_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="1dp"
            android:clickable="true"
            android:text="@string/find_back_pwd"
            android:textColor="@color/selector_white_text"
            android:textSize="13sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sina_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="12dp"
            android:drawableTop="@drawable/denglu_sina"
            android:gravity="center"
            android:text="@string/Sina_login"
            android:textColor="@color/selector_white_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/wechat_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="12dp"
            android:drawableTop="@drawable/denglu_weixin"
            android:gravity="center"
            android:text="@string/WeChat_login"
            android:textColor="@color/selector_white_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/qq_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="12dp"
            android:drawableTop="@drawable/denglu_qq"
            android:gravity="center"
            android:text="@string/QQ_login"
            android:textColor="@color/selector_white_text"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>